tooling/nargo_cli/tests/snapshots/execution_success/a_7/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: [u8; 5], result: [u8; 32]) {
    let digest: [u8; 32] = std::hash::blake2s(x);
    assert(digest == result);
}
